--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-starter",
   "version": "1.3.1",
   "private": true,
-  "homepage": "https://gunnlogan.github.io",
+  "homepage": "https://gunnLogan.github.io/My-Portfolio",
   "dependencies": {
     "eslint-config-technigo": "^1.5.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
