--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "homepage": "https://gunnLogan.github.io/Portfolio",
   "dependencies": {
-    "eslint": "^5.7.0",
+    "eslint": "^5.8.0",
     "eslint-config-technigo": "^1.6.2",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "gh": "^1.13.5",
     "gh-pages": "^2.0.1",
+    "node-sass": "^4.9.4",
     "pages": "0.0.16",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
